@@ -1251,7 +1251,7 @@ classdef model_TFN < model_abstract
                     if isobject(obj.parameters.(modelnames{i}))
                         try
                             setForcingData(obj.parameters.(modelnames{i}), forcingData, forcingData_colnames)
-                        catch
+                        catch ME
                             % do nothing
                         end
                     end
